# ocular

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt  run_server.py  test_pdf_processing.py  test_web_startup.py  vercel.json
.github/workflows/: deploy-gcp.yml
app/: ocular_app.py
app/static/js/: main.js
app/templates/: base.html
data/: schema.json
docs/: README.md  api-reference.md  developer-guide.md  gcp-cloud-functions-deployment.md  runpod-deployment.md  user-guide.md
examples/: basic_usage.py  web_demo.py
notebooks/: mistral_OCR.ipynb
ocular/: __init__.py  client.py  config.py  exceptions.py  models.py  parser.py  processor.py  providers.py  pydantic_client.py  unified_processor.py  utils.py
ocular.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ocular/core/: __init__.py  enums.py  exceptions.py  interfaces.py  logging.py  models.py  validation.py
ocular/providers/: __init__.py  anthropic.py  aws_textract.py  azure_document_intelligence.py  base.py  factory.py  google_vision.py  local.py  mistral.py  olm.py  openai.py  rolm.py  settings.py  tesseract.py
ocular/services/: __init__.py  cache_service.py  document_service.py  ocr_service.py  processing_service.py  validation_service.py
scripts/: debug_providers.py
tests/: __init__.py  conftest.py  test_authentication.py  test_client.py  test_providers.py  test_web_config.py
tests/test_core/: test_models.py
tests/test_provider_modules/: __init__.py  test_factory.py
tests/test_services/: test_validation_service.py
web/: app.py
web/static/css/: style.css
web/templates/: upload.html
